// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewTemplate component matches error snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel"
  >
    NHS app message template
  </div>
  <div
    aria-labelledby="error-summary-title"
    class="nhsuk-error-summary"
    role="alert"
    tabindex="-1"
  >
    <h2
      class="nhsuk-error-summary__title"
      data-testid="error-summary"
      id="error-summary-title"
    />
    <ul
      class="nhsuk-list nhsuk-error-summary__list"
    >
      <li>
        <a
          href="#exampleError"
        >
          Example error
        </a>
      </li>
    </ul>
  </div>
  <h1
    class="review__heading"
    data-testid="preview-message__heading"
  >
    Example NHS APP template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-4 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        />
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        />
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="nhsuk-tag"
          />
        </div>
      </div>
    </div>
  </div>
  Preview
  <form
    action=""
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="preview-form"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
          data-testid="preview-example-form__legend"
        >
          Example heading
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="preview-example"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="preview-example-option-1"
                name="preview-example"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-1"
                id="preview-example-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="preview-example-option-2"
                name="preview-example"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-2"
                id="preview-example-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="preview-form-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`ReviewTemplate component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel"
  >
    NHS app message template
  </div>
  <h1
    class="review__heading"
    data-testid="preview-message__heading"
  >
    Example NHS APP template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-4 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        />
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        />
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="nhsuk-tag"
          />
        </div>
      </div>
    </div>
  </div>
  Preview
  <form
    action=""
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="preview-form"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
          data-testid="preview-example-form__legend"
        >
          Example heading
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="preview-example"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="preview-example-option-1"
                name="preview-example"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-1"
                id="preview-example-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="preview-example-option-2"
                name="preview-example"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-option-2"
                id="preview-example-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="preview-form-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;
